Load persistent BlurpWorld archives on demand