@@ -7,7 +7,6 @@ import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 
-import java.util.Collections;
 import java.util.List;
 
 @RequiredArgsConstructor
@@ -34,6 +33,14 @@ public class CloseSubCommand implements TabExecutor {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command rootCommand, String label, String[] args) {
-        return Collections.emptyList();
+        if (args.length != 1) {
+            return List.of();
+        }
+        String prefix = args[0].toLowerCase();
+        return Instance.getInstances().stream()
+                .map(Instance::getName)
+                .filter(name -> name.toLowerCase().startsWith(prefix))
+                .sorted()
+                .toList();
     }
 }
